--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,7 +1,7 @@
 [unix_http_server]
 file=/tmp/supervisord.sock
 chmod=0755
-chown=root:root 
+chown=ubuntu:ubuntu 
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
@@ -35,8 +35,8 @@ stderr_logfile_backups=10
 
 [program:celery]
 command= celery  worker  -A app:celery --loglevel=info
-process_name=%(program_name)s
-numprocs=2
+process_name = %(program_name)s
+numprocs=1
 directory=/home/ubuntu/flask-srs-dvr
 autostart=true
 user=ubuntu
